--- a/src/main/resources/gui/Pomodoro.fxml
+++ b/src/main/resources/gui/Pomodoro.fxml
@@ -18,18 +18,19 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" text="Exit" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Preferences">
             <items>
-              <MenuItem mnemonicParsing="false" text="Pomodoro Setting" />
-                  <MenuItem mnemonicParsing="false" text="Nitification Setting" />
+              <MenuItem mnemonicParsing="false" text="General Setting" />
+                  <MenuItem mnemonicParsing="false" text="Pomodoro Setting" />
+                  <MenuItem mnemonicParsing="false" text="Notification Setting" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="About AFZ-Pomodoro" />
             </items>
           </Menu>
         </menus>
