CSS apply bug fixed

--- a/src/main/resources/css/pomodoro.css
+++ b/src/main/resources/css/pomodoro.css
@@ -14,7 +14,7 @@
 	-fx-text-fill: #00695C;
 }
 
-#time {
+#lblTime {
 	-fx-content-display: center;
 	-fx-font-size: 70.0px;
 	-fx-letter-spacing: 10.0px;
