--- a/src/main/resources/gui/Pomodoro.fxml
+++ b/src/main/resources/gui/Pomodoro.fxml
@@ -12,12 +12,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-	prefWidth="500.0" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.afz.pomodoro.controller.PomodoroController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.afz.pomodoro.controller.PomodoroController">
 	<children>
-		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-			AnchorPane.topAnchor="0.0">
+		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
@@ -37,8 +34,7 @@
 				</Menu>
 			</menus>
 		</MenuBar>
-		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="375.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="375.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -61,12 +57,9 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<Label id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time"
-					GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
-				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 "
-					GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="2" GridPane.rowSpan="3" />
-				<JFXButton alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text=" " GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
+				<Label id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 " GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="2" GridPane.rowSpan="3" />
+				<JFXButton alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text=" " GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
 					<graphic>
 						<ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
 							<image>
@@ -75,8 +68,7 @@
 						</ImageView>
 					</graphic>
 				</JFXButton>
-				<JFXButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="jfxbitton"
-					text=" " GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
+				<JFXButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="jfxbitton" text=" " GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
 					<graphic>
 						<ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
 							<image>
@@ -95,10 +87,8 @@
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 					</rowConstraints>
 					<children>
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-							text="Session" GridPane.columnSpan="2" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-							text="1 / 4" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Session" GridPane.columnSpan="2" />
+						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="1 / 4" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 					</children>
 				</GridPane>
 				<GridPane GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="2">
@@ -111,10 +101,8 @@
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 					</rowConstraints>
 					<children>
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-							text="Goals" GridPane.columnSpan="2" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-							text="4 / 10" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Goals" GridPane.columnSpan="2" />
+						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="4 / 10" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 					</children>
 				</GridPane>
 			</children>
