--- a/src/main/resources/gui/Pomodoro.fxml
+++ b/src/main/resources/gui/Pomodoro.fxml
@@ -5,14 +5,12 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.afz.pomodoro.controller.PomodoroController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.afz.pomodoro.controller.PomodoroController">
 	<children>
 		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<menus>
@@ -36,12 +34,17 @@
 		</MenuBar>
 		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="375.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
 			<columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -49,62 +52,17 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<Label id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
-				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 " GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="2" GridPane.rowSpan="3" />
-				<JFXButton alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text=" " GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
-					<graphic>
-						<ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-							<image>
-								<Image url="@../images/play-icon.png" />
-							</image>
-						</ImageView>
-					</graphic>
-				</JFXButton>
-				<JFXButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="jfxbitton" text=" " GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="2">
-					<graphic>
-						<ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-							<image>
-								<Image url="@../images/stop-icon.png" />
-							</image>
-						</ImageView>
-					</graphic>
-				</JFXButton>
-				<GridPane GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="2">
-					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-					</rowConstraints>
-					<children>
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Session" GridPane.columnSpan="2" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="1 / 4" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-					</children>
-				</GridPane>
-				<GridPane GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="2">
-					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-					</rowConstraints>
-					<children>
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Goals" GridPane.columnSpan="2" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="4 / 10" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-					</children>
-				</GridPane>
+				<Label id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time" GridPane.columnIndex="3" GridPane.columnSpan="5" />
+				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 " GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Session" GridPane.columnSpan="3" />
+						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts" text="1 / 4" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Goals" GridPane.columnIndex="8" GridPane.columnSpan="3" />
+						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts" text="4 / 10" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+            <JFXButton maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="89.0" styleClass="jfxbutton" text="Play" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+            <JFXButton maxWidth="1.7976931348623157E308" prefHeight="30.0" styleClass="jfxbutton" text="Pause" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
 			</children>
 		</GridPane>
 	</children>
