--- a/src/main/resources/gui/Pomodoro.fxml
+++ b/src/main/resources/gui/Pomodoro.fxml
@@ -10,9 +10,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.afz.pomodoro.controller.PomodoroController">
+<AnchorPane maxHeight="250" maxWidth="350" minHeight="250" minWidth="350"
+	stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.afz.pomodoro.controller.PomodoroController">
 	<children>
-		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+			AnchorPane.topAnchor="0.0">
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
@@ -32,19 +35,20 @@
 				</Menu>
 			</menus>
 		</MenuBar>
-		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="375.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="250" prefWidth="350" AnchorPane.bottomAnchor="0.0"
+			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
 			<columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -52,17 +56,29 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<Label id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time" GridPane.columnIndex="3" GridPane.columnSpan="5" />
-				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 " GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Session" GridPane.columnSpan="3" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts" text="1 / 4" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-						<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals" text="Goals" GridPane.columnIndex="8" GridPane.columnSpan="3" />
-						<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts" text="4 / 10" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-            <JFXButton maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="89.0" styleClass="jfxbutton" text="Play" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
-            <JFXButton maxWidth="1.7976931348623157E308" prefHeight="30.0" styleClass="jfxbutton" text="Pause" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+				<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
+					text="Goals" GridPane.columnSpan="3" />
+				<Label fx:id="lblGoals" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts"
+					text="1 / 4" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+
+				<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
+					text="Sessions" GridPane.columnIndex="8" GridPane.columnSpan="3" />
+				<Label fx:id="lblSessions" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts"
+					text="4 / 10" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+
+				<Label fx:id="lblTitle" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time"
+					GridPane.columnIndex="3" GridPane.columnSpan="5" />
+				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 "
+					GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+				<!-- Buttons -->
+				<JFXButton fx:id="btnPlay" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="89.0"
+					styleClass="jfxbutton" text="Play" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3"
+					GridPane.rowSpan="2" />
+				<JFXButton fx:id="btnPause" maxWidth="1.7976931348623157E308" prefHeight="30.0" styleClass="jfxbutton"
+					text="Pause" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
 			</children>
 		</GridPane>
 	</children>
