--- a/src/main/resources/gui/Pomodoro.fxml
+++ b/src/main/resources/gui/Pomodoro.fxml
@@ -6,16 +6,10 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="250" maxWidth="350" minHeight="250" minWidth="350"
-	stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.afz.pomodoro.controller.PomodoroController">
+<AnchorPane maxHeight="250" maxWidth="350" minHeight="250" minWidth="350" stylesheets="@../css/pomodoro.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.afz.pomodoro.controller.PomodoroController">
 	<children>
-		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-			AnchorPane.topAnchor="0.0">
+		<MenuBar layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
@@ -35,51 +29,16 @@
 				</Menu>
 			</menus>
 		</MenuBar>
-		<GridPane layoutX="77.0" layoutY="25.0" prefHeight="250" prefWidth="350" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-					text="Goals" GridPane.columnSpan="3" />
-				<Label fx:id="lblGoals" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts"
-					text="1 / 4" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+				<Label alignment="CENTER" layoutX="14.0" layoutY="25.0" prefHeight="35.0" styleClass="lblSessionAndGoals" text="Goals" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="25.0" />
 
-				<Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoals"
-					text="Sessions" GridPane.columnIndex="8" GridPane.columnSpan="3" />
-				<Label fx:id="lblSessions" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="lblSessionAndGoalsCounts"
-					text="4 / 10" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+				<Label fx:id="lblTitle" layoutX="123.0" layoutY="24.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="35.0" text="Focus Time" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="25.0" />
 
-				<Label fx:id="lblTitle" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Focus Time"
-					GridPane.columnIndex="3" GridPane.columnSpan="5" />
-				<Label fx:id="lblTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="25:00 "
-					GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+				<Label alignment="CENTER" layoutX="268.0" layoutY="25.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="35.0" styleClass="lblSessionAndGoals" text="Sessions" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
+				<Label fx:id="lblTime" layoutX="100.0" layoutY="60.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" text="25:00 " AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="60.0" />
+				<Label fx:id="lblGoals" layoutX="6.0" layoutY="59.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" styleClass="lblSessionAndGoalsCounts" text="1 / 4" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="60.0" />
+				<Label fx:id="lblSessions" layoutX="268.0" layoutY="60.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" styleClass="lblSessionAndGoalsCounts" text="4 / 10" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
 				<!-- Buttons -->
-				<JFXButton fx:id="btnPlay" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="89.0"
-					styleClass="jfxbutton" text="Play" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3"
-					GridPane.rowSpan="2" />
-				<JFXButton fx:id="btnPause" maxWidth="1.7976931348623157E308" prefHeight="30.0" styleClass="jfxbutton"
-					text="Pause" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
-			</children>
-		</GridPane>
+				<JFXButton fx:id="btnPlay" layoutX="100.0" layoutY="189.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="89.0" styleClass="jfxbutton" text="Play" />
+				<JFXButton fx:id="btnPause" layoutX="180.0" layoutY="189.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" styleClass="jfxbutton" text="Pause" />
 	</children>
 </AnchorPane>
